# janus

./: .gitignore  AGENTS.md  LICENSE  README.md  bootstrap.sh  config.yaml  config.yaml.example  data_sub.md  future.md  pyproject.toml  question.md
docs/: order_commands.md
docs/design/: ib_gateway_rewrite_notes.md  implementation_plan.md  janus_ib_support.md  schema.sql  status.md  symbol_mapping.md  webull_trade_events.md
docs/references/: ib_async_study.md  nautilus_ib_adapter.md  vnpy_architecture_study.md  vnpy_ib_study.md  webull.md
src/janus/: client.py  config.py  server.py  symbol_registry.py  trade_events_engine.py  tui.py
src/janus/gateway/ib/: __init__.py  ib_gateway.py
src/janus/gateway/webull/: webull_gateway.py
tests/: __init__.py  test_client_commands.py  test_harmony.py  test_server_download_initial.py  test_server_ib_lookup.py  test_server_order_parsing.py  test_symbol_registry.py  test_webull_gateway.py  test_webull_trade_events.py
