[project]
name = "janus"
version = "0.1.0"
description = "Distributed Asset Management System"
requires-python = ">=3.11,<3.13"
dependencies = [
    "vnpy>=4.3.0",
    "vnpy_rpcservice",
    "prompt_toolkit>=3.0.36",
    "pyyaml",
    "rich", # 用于美化表格输出
    "protobuf>=5.29.5,<6",
    # Webull SDK and vnpy_ib are installed manually with --no-deps to avoid protobuf conflicts.
    "psycopg>=3.1",
    "importlib_metadata",
    "pytz"
]

[tool.setuptools.packages.find]
where = ["src"]
